# ocean_manual

./: CMakeLists.txt  package.xml
launch/: run_manual.launch
scripts/: send_attitude_target.py
src/: run_manual.cpp  tempCodeRunnerFile.cpp  test.py
